--- a/INSTALL
+++ b/INSTALL
@@ -17,8 +17,13 @@ Building Instructions:
 
 1. Install Apache Tomcat (from RPM or by hand or however you prefer)
 
+2. Clone and build the "bare-vault" dependency
+    $ git clone https://github.com/picketbox/bare-vault.git
+    $ cd bare-vault/
+    $ mvn install
+
 2. Compile Tomcat Vault from its source directory by running
-    mvn install
+    $ mvn install
 
 3. Copy the generated jar target/vault-tomcat-1.0-SNAPSHOT-jar-with-dependencies.jar
    to CATALINA_BASE/lib
