--- a/INSTALL
+++ b/INSTALL
@@ -47,7 +47,7 @@ Usage:
 ------
 
 Simply replace whatever property value you would like to hide 
-in any Apache Tomcat configuration file by ${attribut_name}
+in any Apache Tomcat configuration file by ${attribute_name}
     
     Example
     =======
@@ -61,6 +61,6 @@ Links:
 ------
 
 How to configure Vault :
- - https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/6.4/html/Security_Guide/Mask_the_Keystore_Password_and_Initialize_the_Password_Vault.html
+ - https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/6.4/html/Security_Guide/chap-Secure_Passwords_and_Other_Sensitive_Strings_with_Password_Vault.html
 
 $Id: INSTALL,v 1.1 2015/03/23 11:44:00 maxbeck Exp $
